<resources>
    <string name="app_name">FollowLife</string>
    <string name="tittle_description">Your office online</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_bottom">bottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up_string">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">HAVE AN ACCOUNT?</string>
    <string name="not_yet">Not yet</string>
    <string name="afirmation_string">Yes</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="don_t_have_an_account_sign_up">DON\'T HAVE AN ACCOUNT? SIGN UP</string>
</resources>
