<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitCenter"
        android:layout_margin="@dimen/big_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tittleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tittleDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_description"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_margin="@dimen/little_margin"
        app:layout_constraintTop_toBottomOf="@id/tittleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_string"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@id/tittleDescriptionTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/emailTextView"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_string"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/passwordTextView"/>

        <TextView
            android:id="@+id/forgotPassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_margin="@dimen/big_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_margin="@dimen/big_margin"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/signUpTextView"/>

</android.support.constraint.ConstraintLayout>