<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/logoSignImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="@dimen/big_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tittleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/logoSignImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tittleDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_description"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_margin="@dimen/little_margin"
        app:layout_constraintTop_toBottomOf="@id/tittleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/tittleDescriptionTextView">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"/>

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/lastNameTextView"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_string"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/emailTextView"/>

        <TextView
            android:id="@+id/passTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_string"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/passTextView"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_margin="@dimen/big_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/signUnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_margin="@dimen/big_margin"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/signInTextView"/>
</android.support.constraint.ConstraintLayout>